chore(LICENSE): update license year and owner information chore(README.md): update project name and description chore(package.json): update dependency version for @fluentui/react-components chore(public/index.html): comment out favicon link feat(App.tsx): implement banner generator panel with project name, description, and preview functionality feat(index.tsx): add FluentProvider and ApplyToBody components to apply Fluent UI theme to the app

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fluentui/react": "^8.112.3",
+    "@fluentui/react-components": "^9.36.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
